fixed menu not showing on mobile

--- a/themes/hugo-material-docs/static/stylesheets/application.css
+++ b/themes/hugo-material-docs/static/stylesheets/application.css
@@ -1104,7 +1104,7 @@ h1 .article .headerlink{
         color:#fff
     }
     .drawer{
-        position: relative !important;
+        position: fixed;
         z-index:4
     }
     #toggle-search:checked~.main .results,.drawer,.toggle-search .results{
